try hiding overflow on body element, may cause issues but they can be handled as they arise

--- a/public/modules/core/css/core.less
+++ b/public/modules/core/css/core.less
@@ -31,6 +31,9 @@ body {
 	font-weight: @extraBold;
 	height: @bodyHeight;
 	margin: 0;
+
+    /* For preventing mobile Chrome refreshing by dragging down */
+    overflow-y: hidden;
 }
 
 section {
